# rag

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 496bb2e410ee_criação_das_tabelas_iniciais.py
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/routers/: files.py  search.py
backend/app/services/: chunker.py  embedder.py  ingestion.py  search.py
docker/: docker-compose.yml
frontend/: app.py
