[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "pgvector>=0.4.1",
    "httpx>=0.28.1",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    "pdfminer-six>=20250506",
    "streamlit>=1.47.1",
    "requests>=2.32.4",
    "pandas>=2.3.1",
    "greenlet>=3.2.3",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.9.0",
    "openai>=1.98.0",
]

[tool.setuptools]
package-dir = {"" = "backend"}
[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]
exclude = ["alembic*", "docker*"]
